tests/baselines/reference/strictNullNotNullIndexTypeNoLib(strict=true).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
strictNullNotNullIndexTypeNoLib.ts(7,5): error TS2564: Property 'attrs' has no initializer and is not definitely assigned in the constructor.
strictNullNotNullIndexTypeNoLib.ts(19,5): error TS2564: Property 'properties' has no initializer and is not definitely assigned in the constructor.
strictNullNotNullIndexTypeNoLib.ts(28,5): error TS2564: Property 'attrs' has no initializer and is not definitely assigned in the constructor.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== strictNullNotNullIndexTypeNoLib.ts (3 errors) ====
    type Readonly<T> = {readonly [K in keyof T]: T[K]}
    interface A {
        params?: { name: string; };
    }
    
    class Test<T extends A> {
        attrs: Readonly<T>;
        ~~~~~
!!! error TS2564: Property 'attrs' has no initializer and is not definitely assigned in the constructor.
    
        m() {
            this.attrs.params!.name;
        }
    }
    
    interface Foo {
        foo?: number;
    }
    
    class FooClass<P extends Foo = Foo> {
        properties: Readonly<P>;
        ~~~~~~~~~~
!!! error TS2564: Property 'properties' has no initializer and is not definitely assigned in the constructor.
    
        foo(): number {
            const { foo = 42 } = this.properties;
            return foo;
        }
    }
    
    class Test2<T extends A> {
        attrs: Readonly<T>;
        ~~~~~
!!! error TS2564: Property 'attrs' has no initializer and is not definitely assigned in the constructor.
    
        m() {
            return this.attrs.params!; // Return type should maintain relationship with `T` after being not-null-asserted, ideally
        }
    }